package uk.ac.bucks.willralph.mmmidi.user.nodes;

import javafx.animation.KeyFrame;
import javafx.animation.KeyValue;
import javafx.animation.Timeline;
import javafx.geometry.Pos;
import javafx.scene.layout.GridPane;
import javafx.scene.layout.Priority;
import javafx.scene.layout.StackPane;
import javafx.util.Duration;

import java.util.ArrayDeque;
import java.util.Queue;

//make this a stack pane
public class NoteQueue extends StackPane {

    private NoteAnim currentAnimNote;
    private KeyValue height;
    private KeyValue yPos;

    public final Note.Type COLOUR;
    // this makes the falling notes
    NoteQueue(Note.Type col) {
        COLOUR = col;
        currentAnimNote = new NoteAnim(COLOUR);
        initScale();
    }


    protected void initScale() {
        GridPane.setVgrow(this, Priority.ALWAYS);
        GridPane.setFillWidth(this,true);
        GridPane.setFillHeight(this,true);
        setAlignment(Pos.BOTTOM_CENTER);
    }
    private void makeKeyFrames() {
        height = new KeyValue(currentAnimNote.maxHeightProperty(),this.getHeight()); //this moves everything else up
        yPos = new KeyValue(currentAnimNote.translateYProperty(),-this.getHeight());
    }
    private Timeline timeline;
    private final Duration ANIM_TIME = Duration.seconds(5);

    public void startAnim() {
        makeKeyFrames();

        anims.add(currentAnimNote);

        this.getChildren().add(currentAnimNote);
        KeyFrame frame = new KeyFrame(ANIM_TIME, height);

        timeline = new Timeline(frame);
        timeline.play();
    }
    public void stopAnim() {
        newAnimNote();

        //Duration currentRunTime = timeline.getCurrentTime();
        //System.out.println(currentRunTime);
        timeline.stop();
        //.subtract(currentRunTime)
        KeyFrame frame = new KeyFrame(ANIM_TIME, yPos);

        timeline = new Timeline(frame);
        timeline.playFromStart();
        timeline.setOnFinished(_ -> cleanUp());


    }
    private final Queue<NoteAnim> anims = new ArrayDeque<>();
    private void cleanUp() {
        // Stuck at O(n) because javafx is -
        // O(1) with queue imp
        this.getChildren().remove(anims.poll());
    }

    private void newAnimNote() {
        currentAnimNote = new NoteAnim(COLOUR);
    }
}
