
@startuml
!include https://raw.githubusercontent.com/bschwarz/puml-themes/refs/heads/master/themes/materia-outline/puml-theme-materia-outline.puml
'skinparam classAttributeIconSize 0
hide circle


' FORCE COMPACT LAYOUT OVERRIDES
skinparam roundcorner           15
skinparam ParticipantPadding    20
skinparam BoxPadding            10
skinparam Padding               3


class Note {
  -PIANO: Piano
  -{static} noteInt: int = 36
  -QUEUE: NoteQueue
  -WHITE_COLOUR: String = "-fx-background-color: #FFFFFF;"
  -BLACK_COLOUR: String = "-fx-background-color: #000000;"
  --
  ~Note(col: Type, piano: Piano, queue: NoteQueue)
  +beginCount(start: int): void
  +noteCount(): void
  #whiteStyle(): void
  #blackStyle(): void
  +stretch(): void
  #invis(): void
  -on(): void
  -off(): void
  +pressed(): void
  +unpressed(): void
}

class NoteAnim {
  ~NoteAnim(col: Type)
  #initScale(): void
  #whiteStyle(): void
  #blackStyle(): void
  #invis(): void
}

abstract class NoteBox {
  #value: int = 0
  #COLOUR: Type
  --
  ~NoteBox(col: Type)
  +getValue(): int
  #callStyle(): void
  #whiteStyle(): void
  #blackStyle(): void
  #invis(): void
}

class NoteQueue {
  -currentAnimNote: NoteAnim
  -height: KeyValue
  -yPos: KeyValue
  +COLOUR: Note.Type
  -timeline: Timeline
  -ANIM_TIME: Duration = Duration.seconds(5)
  -anims: Queue<NoteAnim> = new ArrayDeque<>()
  --
  ~NoteQueue(col: Note.Type)
  #initScale(): void
  -makeKeyFrames(): void
  +startAnim(): void
  +stopAnim(): void
  -cleanUp(): void
  -newAnimNote(): void
}

class Piano {
  +SERIAL: SerialCom
  +{static} sounds: SoundFont
  -{static} midiDevice: MidiConnection
  +VISUALIZER: PianoVisualizer
  -{static} GAP_VALUES: Integer[]
  -BLACK_GAPS: HashSet<Integer>
  -endGap: boolean
  +{static} noteMap: HashMap<Integer, Note>
  -noteCount: int = 0
  -{static} initialized: boolean
  -{static} GAP_BLACK_COUNT: int = 12
  -{static} appWidthChanged: boolean = false
  --
  +Piano(oct: int)
  -isGap(): boolean
  +{static} tune(note: Note, start: int): void
  -{static} addNote(note: Note): void
  #initScale(): void
  -generateOctaves(): void
  #makeBlackGap(column: int): void
  -makeQueue(column: int, type: Note.Type): NoteQueue
  #makeWhite(column: int): void
  #makeBlack(column: int): void
  +setListeners(): void
  -offsetBlack(): void
  +setOctaves(octaves: int): void
}

class PianoVisualizer {
  -currentNote: NoteQueue
  --
  +PianoVisualizer()
  #initScale(): void
  +setCurrentNote(column: int, note: NoteQueue): void
  #makeWhite(column: int): void
  #makeBlack(column: int): void
  #makeBlackGap(column: int): void
}

abstract class PianoGrid {
  +BLACK_NOTES: GridPane
  +WHITE_NOTES: GridPane
  #{static} octaves: int = 5
  +{static} OCTAVE: int = 7
  -{static} END_NOTES_OFFSET: int = 1
  --
  #scale(): void
  -{static} scaleChildNote(): void
  +addStackedGrids(): void
  +getWhiteWidth(): double
  +getBlackWidth(): double
  #getTotalWhiteCount(): int
  #initScale(): void
  #makeBlackGap(column: int): void
  #makeWhite(column: int): void
  #makeBlack(column: int): void
}
NoteAnim -[hidden]right- PianoVisualizer
Note -[hidden]right- Piano
PianoGrid -[hidden]right- Piano

Note --|> NoteBox
Note *-- Piano
Note *-- NoteQueue
NoteAnim --|> NoteBox
NoteQueue *-- NoteAnim
NoteQueue -[hidden]- NoteAnim
Piano --|> PianoGrid
Piano *-- PianoVisualizer
Piano o-- Note
Piano ..> NoteQueue
PianoVisualizer --|> PianoGrid
PianoVisualizer *-- NoteQueue
@enduml